--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
   <footer id="visitCounterFixed">
     页面访问次数：<span id="counter">加载中...</span>
     ｜今日访问：<span id="todayCounter">加载中...</span>
+    ｜<a href="https://github.com/yuzeis/ZJCSEXPCalculator" target="_blank" rel="noopener noreferrer">源代码</a>
   </footer>
   <div class="overlay" id="overlay" hidden>
     <div class="editor" role="dialog" aria-modal="true">
-      <h3>编辑等级经验表</h3>
+      <h3>编辑等级经验表（角色界面左侧等级时右侧的经验）</h3>
+      <!-- 参考图片：在右侧显示 -->
+      <img src="static/img/1.png" alt="等级经验对照示例" style="float:right; max-width:200px; margin-left:12px;">
       <table id="csvTable"></table>
       <div class="editor-actions">
         <button id="addRowBtn"  type="button">添加行</button>
